--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <div class="row">
 
             <div class="col-sm">
-                <img class="roundBorder floatLeft m-4" src="./assets/images/avatar_new.jpg" width="200px"/>
+                <img class="round floatLeft m-4" src="./assets/images/avatar_new.jpg" width="200px"/>
                 <p>
                     My name is Devin North and I'm an aspiring full-stack web developer from Far West Texas. I've lived in the Houston area for three years and have fallen in love with the city. I love anything with a processor, am an avid video game enthusiast, and a proud "computer nerd".
                 </p>
@@ -63,6 +63,8 @@
 
     </div>
     <!-- End Main Content / Grid Container -->
+
+
 
 </body>
 </html>
