Worked on styling of index.html to get it where I want it. Pushing to see it live, show it

--- a/contact.html
+++ b/contact.html
@@ -48,7 +48,7 @@
 
             <div class="col-sm">
                 
-                <!-- Insert Content -->
+                <!-- Insert Content Here-->
     
             </div>
 
@@ -56,6 +56,12 @@
 
     </div>
     <!-- End Main Content / Grid Container -->
+
+    <footer id="stickyFooter"> 
+        <div class="d-flex justify-content-center">
+            &copy;2018 Devin North
+        </div>
+    </footer>
 
 </body>
 </html>
