--- a/portfolio.html
+++ b/portfolio.html
@@ -48,7 +48,50 @@
 
             <div class="col-sm">
                 
-                <!-- Insert Content -->
+                <!-- Image / Link Grid of Projects -->
+                <div class="container">
+
+                    <div class="row">
+
+                        <div class="col-sm-3">
+                            <img class="portfolioImg" src="assets/images/placeholder1.jpg" />
+                        </div>
+
+                        <div class="col-sm-3">
+                            <img class="portfolioImg" src="assets/images/placeholder2.jpg" />
+                        </div>
+
+                        <div class="col-sm-3">
+                            <img class="portfolioImg" src="assets/images/placeholder3.jpg" />
+                        </div>
+
+                        <div class="col-sm-3">
+                            <img class="portfolioImg" src="assets/images/placeholder4.jpg" />
+                        </div>
+
+                    </div>
+
+                    <div class="row">
+
+                        <div class="col-sm-3">
+                            <img class="portfolioImg" src="assets/images/placeholder5.jpg" />
+                        </div>
+
+                        <div class="col-sm-3">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis aliquid fugit deleniti assumenda, natus similique quae ratione vel ab dicta corrupti ea impedit eligendi nisi dolorum nemo quas amet commodi debitis quia fuga eius? Voluptate, eos facere cumque voluptatibus assumenda amet neque voluptatum fugiat repudiandae dolore, expedita suscipit ratione sunt.
+                        </div>
+
+                        <div class="col-sm-3">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci sed recusandae ipsa labore nam magni nemo modi facere debitis, optio nihil libero omnis aspernatur aliquid aut sequi eum inventore? Quia ex dicta deserunt cupiditate corrupti itaque numquam eos porro modi amet animi, impedit voluptates perferendis odio nemo facere necessitatibus aperiam.
+                        </div>
+
+                        <div class="col-sm-3">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci sed recusandae ipsa labore nam magni nemo modi facere debitis, optio nihil libero omnis aspernatur aliquid aut sequi eum inventore? Quia ex dicta deserunt cupiditate corrupti itaque numquam eos porro modi amet animi, impedit voluptates perferendis odio nemo facere necessitatibus aperiam.
+                        </div>
+
+                    </div>
+
+                </div>
 
             </div>
 
@@ -56,6 +99,12 @@
 
     </div>
     <!-- End Main Content / Grid Container -->
+
+    <footer id="stickyFooter"> 
+        <div class="d-flex justify-content-center">
+            &copy;2018 Devin North
+        </div>
+    </footer>
 
 </body>
 </html>
