Made a few more modifications. Changed sticky footer from Bootstrap\'s class to a simple position:fixed bottom:0 because when the links wrapped under the copyright, the footer scrolls.

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                     
                     <div class="col-sm-8 p-2">
 
-                        <span class="badge badge-light headerFont purpleText">Devin North</span>
+                        <span class="badge badge-light headerFont purpleText m-1">Devin North</span>
 
                     </div>
 
@@ -80,7 +80,7 @@
     <!-- End Main Content / Grid Container -->
 
     <!-- Sticky footer bar -->
-    <footer class="fixed-bottom" id="footerBar"> 
+    <footer id="footerBar"> 
 
         <div class="container">
 
@@ -94,9 +94,15 @@
 
                 <div class="col-sm-3 d-flex justify-content-end">
 
-                    <a class="nav-link" href="https://www.github.com/dvnnorth" target="_blank">GitHub</a>
-                    <a class="nav-link" href="https://www.linkedin.com/in/dvnnorth" target="_blank">LinkedIn</a>
-                    <a class="nav-link" href="https://www.twitter.com/devin_n_" target="_blank">Twitter</a>
+                    <a class="nav-link" href="https://www.github.com/dvnnorth" target="_blank">
+                        <img class="socialLink" src="assets/images/GitHub-Mark-Light-120px-plus.png" width="24px">
+                    </a>
+                    <a class="nav-link" href="https://www.linkedin.com/in/dvnnorth" target="_blank">
+                        <img class="socialLink" src="assets/images/In-White-128px-TM.png" width="24px">
+                    </a>
+                    <a class="nav-link" href="https://www.twitter.com/devin_n_" target="_blank">
+                        <img class="socialLink" src="assets/images/Twitter_Logo_WhiteOnImage.png" width="24px">
+                    </a>
 
                 </div>
 
