Finalized the style, applied it across all pages

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <div class="row">
 
                 <div class="col">
-                    <h1 class="m-4 display-4">About Me</h1>
+                    <h1 class="display-4 mt-3">About Me</h1>
                     <hr>
                 </div>
 
@@ -60,7 +60,7 @@
             <div class="row mb-5">
 
                 <div class="col">
-                    <img class="round float-left m-4" src="./assets/images/avatar_new.jpg" width="200px"/>
+                    <img class="roundedEdges float-left mr-3 mb-2" src="./assets/images/avatar_new.jpg" width="200px"/>
                     <p class="text-justify">
                         My name is Devin North and I'm an aspiring full-stack web developer from Far West Texas. I've lived in the Houston area for three years and have fallen in love with the city. I love anything with a processor, am an avid video game enthusiast, and a proud "computer nerd".
                     </p>
