--- a/portfolio.html
+++ b/portfolio.html
@@ -51,7 +51,7 @@
             <div class="row">
 
                 <div class="col-sm">
-                    <h1 class="m-4 display-4">Portfolio</h1>
+                    <h1 class="display-4 mt-3">Portfolio</h1>
                     <hr>
                 </div>
 
