Made final tweaks to style, added form content to Contact page

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
             <div class="row mb-5">
 
-                <div class="col">
+                <div class="col mb-5">
                     <img class="roundedEdges float-left mr-3 mb-2" src="./assets/images/avatar_new.jpg" width="200px"/>
                     <p class="text-justify">
                         My name is Devin North and I'm an aspiring full-stack web developer from Far West Texas. I've lived in the Houston area for three years and have fallen in love with the city. I love anything with a processor, am an avid video game enthusiast, and a proud "computer nerd".
