--- a/portfolio.html
+++ b/portfolio.html
@@ -59,7 +59,7 @@
 
             <div class="row mb-5">
 
-                <div class="col">
+                <div class="col mb-5">
                     
                     <!-- Image / Link Grid of Projects -->
                     <div class="container">
