--- a/contact.html
+++ b/contact.html
@@ -59,9 +59,23 @@
 
             <div class="row mb-5">
 
-                <div class="col">
+                <div class="col mb-5">
                     
-                    <!-- Insert content here -->
+                        <form>
+                            <div class="form-group">
+                                <label for="name">Name</label>
+                                <input type="name" class="form-control" id="name" placeholder="Jane Smith">
+                            </div>
+                            <div class="form-group">
+                                <label for="email">Email Address</label>
+                                <input type="email" class="form-control" id="email" placeholder="jane@example.com">
+                            </div>
+                            <div class="form-group">
+                                <label for="message">Message</label>
+                                <textarea class="form-control" id="message" rows="3" placeholder="Enter your message here..."></textarea>
+                            </div>
+                            <button type="submit" class="btn btn-secondary">Submit</button>
+                        </form>
 
                 </div>
 
